--- a/opendaylight/web/root/src/main/resources/css/one.less
+++ b/opendaylight/web/root/src/main/resources/css/one.less
@@ -290,3 +290,19 @@ table {
 		display: none;
 	}
 }
+
+// troubleshoot custom
+#charts {
+  margin: 0 auto;
+  padding: 0 20px;
+  canvas {
+    background: #eee;
+    border: 1px solid #444;
+  }
+  .title {
+    display: block;
+  }
+  .value {
+    font-weight: bold;
+  }
+}
